made shoulders look better

--- a/css/style.scss
+++ b/css/style.scss
@@ -41,7 +41,7 @@ section {
         &.charBody {
             width: 130px;
             height: 215px;
-            border-radius: 25px 25px 7px 7px;
+            border-radius: 30px 30px 8.5px 8.5px;
         }
     }
 
@@ -98,6 +98,13 @@ section {
             width: 125px;
             height: 110px;
             cursor: pointer;
+
+            & + section {
+                & [name="firstHalf"], 
+                & [name="secondHalf"] {
+                    
+                }
+            }
         }
     }
 }
