--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
   margin: 0;
 }
 
+body {
+  overflow: hidden;
+}
+
 section {
   height: 100vh;
   display: -webkit-box;
@@ -114,5 +118,99 @@ section #equal:hover, section #equal:focus {
   width: 125px;
   height: 110px;
   cursor: pointer;
+}
+
+#wheel {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+}
+
+#wheel div {
+  border-radius: 100%;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  width: 100px;
+  height: 100px;
+  z-index: 10;
+}
+
+#wheel div:nth-child(1) {
+  background-color: #f96a6a;
+  -webkit-transform: translateX(15vw);
+          transform: translateX(15vw);
+}
+
+#wheel div:nth-child(2) {
+  background-color: #6af96c;
+  -webkit-transform: rotate(72deg) translateX(15vw);
+          transform: rotate(72deg) translateX(15vw);
+}
+
+#wheel div:nth-child(3) {
+  background-color: #6ae6f9;
+  -webkit-transform: rotate(144deg) translateX(15vw);
+          transform: rotate(144deg) translateX(15vw);
+}
+
+#wheel div:nth-child(4) {
+  background-color: #e6f96a;
+  -webkit-transform: rotate(216deg) translateX(15vw);
+          transform: rotate(216deg) translateX(15vw);
+}
+
+#wheel div:nth-child(5) {
+  background-color: #f9bb6a;
+  -webkit-transform: rotate(288deg) translateX(15vw);
+          transform: rotate(288deg) translateX(15vw);
+}
+
+#wheel div:nth-child(1) {
+  -webkit-animation: spin 1.5s linear infinite;
+          animation: spin 1.5s linear infinite;
+}
+
+#wheel div:nth-child(2) {
+  -webkit-animation: spin 1.5s linear infinite;
+          animation: spin 1.5s linear infinite;
+}
+
+#wheel div:nth-child(3) {
+  -webkit-animation: spin 1.5s linear infinite;
+          animation: spin 1.5s linear infinite;
+}
+
+#wheel div:nth-child(4) {
+  -webkit-animation: spin 1.5s linear infinite;
+          animation: spin 1.5s linear infinite;
+}
+
+#wheel div:nth-child(5) {
+  -webkit-animation: spin 1.5s linear infinite;
+          animation: spin 1.5s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 /*# sourceMappingURL=style.css.map */
