--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,10 @@ body {
     margin: 0;
 }
 
+body {
+    overflow: hidden;
+}
+
 section {
     height: 100vh;
     display: flex;
@@ -117,15 +121,60 @@ section {
     right: 0;
     text-align: center;
     z-index: 5;
+    width: 100%;
+    height: 100%;
 
     & div {
         border-radius: 100%;
         position: absolute;
-        width: 350px;
-        height: 350px;
-    }
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        text-align: center;
+        width: 100px;
+        height: 100px;
+        z-index: 10;
 
-    &:nth-child(1) {
-        background-color: red;
+        &:nth-child(1) {
+            background-color: rgb(249, 106, 106);
+            // transform: translateX(15vw);
+        }
+
+        &:nth-child(2) {
+            background-color: rgb(106, 249, 108);
+            // transform: rotate(72deg) translateX(15vw);
+        }
+
+        &:nth-child(3) {
+            background-color: rgb(106, 230, 249);
+            // transform: rotate(144deg) translateX(15vw);
+        }
+
+        &:nth-child(4) {
+            background-color: rgb(230, 249, 106);
+            // transform: rotate(216deg) translateX(15vw);
+        }
+
+        &:nth-child(5) {
+            background-color: rgb(249, 187, 106);
+            // transform: rotate(288deg) translateX(15vw);
+        }
+
+        @for $i from 1 through 5 {
+            &:nth-child(#{$i}) {
+                transform: rotate(((#{$i}-1)*72)+deg) translateX(15vw);
+                animation: spin 1.5s linear infinite;
+            }
+        }
+    }
+}
+
+@keyframes spin {
+    // from {
+    //     transform: rotate(0deg);
+    // }
+    to {
+        transform: rotate(360deg) translateX(15vw);
     }
 }
