--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,10 @@ section #equal:hover, section #equal:focus {
   cursor: pointer;
 }
 
+section #equal:hover + #wheel, section #equal:focus + #wheel {
+  display: block !important;
+}
+
 #wheel {
   position: absolute;
   margin-left: auto;
@@ -130,9 +134,12 @@ section #equal:hover, section #equal:focus {
   z-index: 5;
   width: 100%;
   height: 100%;
+  display: none;
 }
 
 #wheel div {
+  -webkit-animation: spin 5s linear infinite;
+          animation: spin 5s linear infinite;
   border-radius: 100%;
   position: absolute;
   margin-left: auto;
@@ -140,8 +147,8 @@ section #equal:hover, section #equal:focus {
   left: 0;
   right: 0;
   text-align: center;
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   z-index: 10;
 }
 
@@ -175,42 +182,27 @@ section #equal:hover, section #equal:focus {
           transform: rotate(288deg) translateX(15vw);
 }
 
-#wheel div:nth-child(1) {
-  -webkit-animation: spin 1.5s linear infinite;
-          animation: spin 1.5s linear infinite;
-}
-
-#wheel div:nth-child(2) {
-  -webkit-animation: spin 1.5s linear infinite;
-          animation: spin 1.5s linear infinite;
-}
-
-#wheel div:nth-child(3) {
-  -webkit-animation: spin 1.5s linear infinite;
-          animation: spin 1.5s linear infinite;
-}
-
-#wheel div:nth-child(4) {
-  -webkit-animation: spin 1.5s linear infinite;
-          animation: spin 1.5s linear infinite;
-}
-
-#wheel div:nth-child(5) {
-  -webkit-animation: spin 1.5s linear infinite;
-          animation: spin 1.5s linear infinite;
-}
-
 @-webkit-keyframes spin {
   to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    rotate: 1turn;
   }
 }
 
 @keyframes spin {
   to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    rotate: 1turn;
+  }
+}
+
+@-webkit-keyframes stay {
+  to {
+    rotate: -1turn;
+  }
+}
+
+@keyframes stay {
+  to {
+    rotate: -1turn;
   }
 }
 /*# sourceMappingURL=style.css.map */
