--- a/css/style.scss
+++ b/css/style.scss
@@ -103,12 +103,9 @@ section {
             height: 110px;
             cursor: pointer;
 
-            // & + section {
-            //     & [name="firstHalf"], 
-            //     & [name="secondHalf"] {
-                    
-            //     }
-            // }
+            & + #wheel {
+                display: block !important;
+            }
         }
     }
 }
@@ -123,8 +120,10 @@ section {
     z-index: 5;
     width: 100%;
     height: 100%;
+    display: none;
 
     & div {
+        animation: spin 5s linear infinite;
         border-radius: 100%;
         position: absolute;
         margin-left: auto;
@@ -132,49 +131,45 @@ section {
         left: 0;
         right: 0;
         text-align: center;
-        width: 100px;
-        height: 100px;
+        width: 150px;
+        height: 150px;
         z-index: 10;
 
         &:nth-child(1) {
             background-color: rgb(249, 106, 106);
-            // transform: translateX(15vw);
+            transform: translateX(15vw);
         }
 
         &:nth-child(2) {
             background-color: rgb(106, 249, 108);
-            // transform: rotate(72deg) translateX(15vw);
+            transform: rotate(72deg) translateX(15vw);
         }
 
         &:nth-child(3) {
             background-color: rgb(106, 230, 249);
-            // transform: rotate(144deg) translateX(15vw);
+            transform: rotate(144deg) translateX(15vw);
         }
 
         &:nth-child(4) {
             background-color: rgb(230, 249, 106);
-            // transform: rotate(216deg) translateX(15vw);
+            transform: rotate(216deg) translateX(15vw);
         }
 
         &:nth-child(5) {
             background-color: rgb(249, 187, 106);
-            // transform: rotate(288deg) translateX(15vw);
-        }
-
-        @for $i from 1 through 5 {
-            &:nth-child(#{$i}) {
-                transform: rotate(((#{$i}-1)*72)+deg) translateX(15vw);
-                animation: spin 1.5s linear infinite;
-            }
+            transform: rotate(288deg) translateX(15vw);
         }
     }
 }
 
 @keyframes spin {
-    // from {
-    //     transform: rotate(0deg);
-    // }
     to {
-        transform: rotate(360deg) translateX(15vw);
+        rotate: 1turn;
+    }
+}
+
+@keyframes stay {
+    to {
+        rotate: -1turn;
     }
 }
