--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ section #equal {
   width: 115px;
   height: 100px;
   display: block;
-  z-index: 1;
+  z-index: 100;
   -webkit-transition: all .35s ease-in-out;
   transition: all .35s ease-in-out;
 }
@@ -120,8 +120,8 @@ section #equal:hover, section #equal:focus {
   cursor: pointer;
 }
 
-section #equal:hover + #wheel, section #equal:focus + #wheel {
-  display: block !important;
+section #equal:hover ~ #wheel div, section #equal:focus ~ #wheel div {
+  display: block;
 }
 
 #wheel {
@@ -134,12 +134,12 @@ section #equal:hover + #wheel, section #equal:focus + #wheel {
   z-index: 5;
   width: 100%;
   height: 100%;
-  display: none;
 }
 
 #wheel div {
   -webkit-animation: spin 5s linear infinite;
           animation: spin 5s linear infinite;
+  display: none;
   border-radius: 100%;
   position: absolute;
   margin-left: auto;
