--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,7 @@ section {
         width: 115px;
         height: 100px;
         display: block;
-        z-index: 1;
+        z-index: 100;
         transition: all .35s ease-in-out;
 
         & span {
@@ -103,8 +103,9 @@ section {
             height: 110px;
             cursor: pointer;
 
-            & + #wheel {
-                display: block !important;
+            & ~ #wheel div {
+                // transform: translateX(15vw);
+                display: block;
             }
         }
     }
@@ -120,10 +121,10 @@ section {
     z-index: 5;
     width: 100%;
     height: 100%;
-    display: none;
 
     & div {
         animation: spin 5s linear infinite;
+        display: none;
         border-radius: 100%;
         position: absolute;
         margin-left: auto;
