--- a/css/style.scss
+++ b/css/style.scss
@@ -128,7 +128,7 @@ section {
     height: 100%;
 
     & div {
-        transition: translateX 1s ease-in-out;
+        transition: all 10s;
         animation: spin 5s linear infinite;
         display: none;
         border-radius: 100%;
@@ -142,48 +142,38 @@ section {
         height: 150px;
         z-index: 10;
 
+        & img {
+            animation: stay 5s linear infinite;
+        }
+
         &:nth-child(1) {
             background-color: rgb(249, 106, 106);
         }
 
         &:nth-child(2) {
             background-color: rgb(106, 249, 108);
-            transform: rotate(72deg);
-
-            & img {
-                transform: rotate(-72deg);
-            }
         }
 
         &:nth-child(3) {
             background-color: rgb(106, 230, 249);
-            transform: rotate(144deg);
-
-            & img {
-                transform: rotate(-144deg);
-            }
         }
 
         &:nth-child(4) {
             background-color: rgb(230, 249, 106);
-            transform: rotate(216deg);
-
-            & img {
-                transform: rotate(-216deg);
-            }
         }
 
         &:nth-child(5) {
             background-color: rgb(249, 187, 106);
-            transform: rotate(288deg);
-
-            & img {
-                transform: rotate(-288deg);
-            }
         }
 
-        & img {
-            animation: stay 5s linear infinite;
+        @for $i from 1 through 5 {
+            &:nth-child(#{$i}) {
+                transform: rotate((($i - 1)*72)+deg);
+
+                & img {
+                    transform: rotate(-(($i - 1)*72)+deg);
+                }
+            }
         }
     }
 }
