--- a/css/style.scss
+++ b/css/style.scss
@@ -116,6 +116,41 @@ section {
     }
 }
 
+@mixin spinAnimate ($rotateVal, $num) {   
+    animation: spin#{$num} 5s linear infinite;
+
+    & img {
+        transform: rotate((-1 * (($num - 1)*72))+deg);
+        animation: stay#{$num} 5s linear infinite;
+    }
+
+    @keyframes spin#{$num} {
+        to {
+            transform: rotate((360 + $rotateVal)+deg) translateX(15vw);
+        }
+    }
+
+    @keyframes stay#{$num} {
+        to {
+            transform: rotate((-1 * (360 + $rotateVal))+deg);
+        }
+    }
+
+    @supports (rotate: 1turn) {
+        @keyframes spin#{$num} {
+            to {
+                rotate: 1turn;
+            }
+        }
+
+        @keyframes stay#{$num} {
+            to {
+                rotate: -1turn;
+            }
+        }
+    }
+}
+
 #wheel {
     position: absolute;
     margin-left: auto;
@@ -128,11 +163,10 @@ section {
     height: 100%;
 
     & div {
-        transition: all 10s;
-        animation: spin 5s linear infinite;
         display: none;
         border-radius: 100%;
         position: absolute;
+        transition: transform 1s ease-in-out;
         margin-left: auto;
         margin-right: auto;
         left: 0;
@@ -141,10 +175,6 @@ section {
         width: 150px;
         height: 150px;
         z-index: 10;
-
-        & img {
-            animation: stay 5s linear infinite;
-        }
 
         &:nth-child(1) {
             background-color: rgb(249, 106, 106);
@@ -168,24 +198,9 @@ section {
 
         @for $i from 1 through 5 {
             &:nth-child(#{$i}) {
-                transform: rotate((($i - 1)*72)+deg);
-
-                & img {
-                    transform: rotate(-(($i - 1)*72)+deg);
-                }
+                transform: rotate((($i - 1)*72)+deg) translateX(0vw);
+                @include spinAnimate((($i - 1)*72),$i);
             }
         }
-    }
-}
-
-@keyframes spin {
-    to {
-        rotate: 1turn;
-    }
-}
-
-@keyframes stay {
-    to {
-        rotate: -1turn;
     }
 }
